# transformer_online_continual_learning

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: PUBLIC_RELEASE.md  RUNBOOK.md
outputs/pretrained/: ablation_results.json
outputs/pretrained/report/: comparison_table.csv  comparison_table.md  sanity_check_table.csv  sanity_check_table.md  table1_method_comparison.md
outputs/pretrained/runs/: comparison_seed_rows.csv  runs_index.json
outputs/vgg_plus_plus/: ablation_results.json
outputs/vgg_plus_plus/report/: comparison_table.csv  comparison_table.md  sanity_check_table.csv  sanity_check_table.md
outputs/vgg_plus_plus/runs/: comparison_seed_rows.csv  run_experience_replay_42.json  run_online_sgd_42.json  run_pi_transformer_42.json  run_two_token_transformer_42.json  runs_index.json
scripts/: build_report_figures.py  plot_claims.py  run_ablations.py  run_report_suite.py  run_vggpp_joint_suite.py  train.py
src/continuous_learning/: __init__.py  config.py
src/continuous_learning/data/: __init__.py  cifar_stream.py  extract_features.py
src/continuous_learning/models/: __init__.py  feature_extractor.py  online_sgd.py  pi_transformer.py  two_token.py  vgg_plus_plus.py  vggpp.py
src/continuous_learning/training/: __init__.py  engine.py  metrics.py  replay.py
