[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-learning-cifar"
version = "0.1.0"
description = "Paper-faithful Pi-Transformer reproduction scaffold for CIFAR-100 continual learning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "matplotlib>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
